# fall-2025-interest-group-projects

project/02-embeddings/: README.md  embedding.ipynb
user/aparna-suresh/01-llm-lora/: finetune.ipynb  finetune.py  pyproject.toml
user/harshul-basava/02-embeddings/: embedding.ipynb
user/ignacio/: finetune.ipynb
user/prateek/: finetune.ipynb
user/rwang/00/: config.yaml
user/rwang/02/: embedding.ipynb  pyproject.toml
user/yzhang3925/: embedding.ipynb
