[project]
name = "embedding"
version = "0.1.0"
description = "Computer Vision: Fashion MNIST with DINOv2 embeddings and UMAP clustering"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "umap-learn>=0.5.4",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
